--- a/basePresentar_AAA/src/basepresentar_aaa/Servidor.form
+++ b/basePresentar_AAA/src/basepresentar_aaa/Servidor.form
@@ -61,7 +61,7 @@
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Tahoma" size="12" style="2"/>
+          <Font name="Times New Roman" size="14" style="0"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Nombre del servidor"/>
       </Properties>
